--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon --harmony server.js",
     "watch": "watchify src/app/*.js src/app/**/*.js -o public/js/app.js -d -v",
+    "watch:user": "watchify src/user/*.js src/user/**/*.js -o public/js/user.js -d -v",
     "test": "jest"
   },
   "repository": {
