--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --harmony server.js",
-    "watch": "watchify src/app/*.js src/app/**/*.js -o public/js/app.js -d -v",
-    "watch:user": "watchify src/user/*.js src/user/**/*.js -o public/js/user.js -d -v",
+    "watch": "watchify src/app/*.js src/app/**/*.js -o public/js/app.js -v",
+    "watch:user": "watchify src/user/*.js src/user/**/*.js -o public/js/user.js -v",
     "test": "jest"
   },
   "repository": {
