--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
     "material-ui": "^0.4.0",
+    "moment": "^2.8.4",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
