--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "dependencies": {
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
-    "material-ui": "^0.4.0",
+    "material-ui": "^0.4.1",
     "moment": "^2.8.4",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
+    "react-tap-event-plugin": "^0.1.3",
     "superagent": "^0.21.0"
   },
   "devDependencies": {
