--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^0.12.2",
     "react-router": "^0.11.6",
     "react-tap-event-plugin": "^0.1.3",
+    "react-imageloader": "^1.1.0",
     "superagent": "^0.21.0"
   },
   "devDependencies": {
