--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "moment": "^2.8.4",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
+    "react-imageloader": "^1.1.0",
     "react-router": "^0.11.6",
     "react-tap-event-plugin": "^0.1.3",
-    "react-imageloader": "^1.1.0",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "browserify": "^7.0.3",
