--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "flux": "^2.0.1",
     "keymirror": "^0.1.1",
+    "material-design-fonticons": "^1.0.0",
     "material-ui": "^0.4.1",
     "moment": "^2.8.4",
     "object-assign": "^2.0.0",
