--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "q": "^1.1.2",
     "react": "^0.12.2",
     "react-imageloader": "^1.1.0",
+    "react-infinite-scroll": "^0.1.5",
     "react-router": "^0.11.6",
     "react-tap-event-plugin": "^0.1.3",
     "superagent": "^0.21.0",
